styles/mockup/mockup.css
body {
  /* max-width: 1920px; */
  margin-left: auto;
  margin-right: auto;
  font: normal 16px/1.5 'Monteserrat',
    sans-serif;
  color: #fafafa;
  cursor: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABMAAAAPCAMAAAAxmgQeAAAACVBMVEX///8AAAD///9+749PAAAAAXRSTlMAQObYZgAAAD5JREFUGNN1j9EKADAIAnP//9GjFq6w7iU4DNRsB06cb44TJ+UzYUcniqnqoA6ag/62JhjKIU0rxx1lKveuXJ5UAQs/G/2vAAAAAElFTkSuQmCC), auto;
}

/* HIDE SCROLLBAR BUT STILL ALLOW SCROLL (CHROME, SAFARI, OPERA) */
body::-webkit-scrollbar {
  width: 0 !important
}

/* HIDE SCROLLBAR BUT STILL ALLOW SCROLL (FIREFOX) */
body {
  scrollbar-width: none;
}

#hidden-sm {
  display: none;
}

.hidden-sm {
  display: none;
}

.header-heading,
.header-subheading,
.projects-cta,
#about-section,
#contact-section {
  background-color: #1A1A1A;
}

#project-section {
  background-color: #fafafa
}

.projects-main-heading {
  color: #272727;
}

.section-heading {
  margin: 0 0 10px;
  font-size: 2.35rem;
}

.section-heading,
.contact-subheading,
.contact-text {
  text-align: center;
}


/* ------------------------------------
---------------------------------------
LIST STYLING
---------------------------------------
------------------------------------ */

ul {
  list-style-type: none;
  padding-left: 0;
}

a:link {
  text-decoration: none;
}


a:visited {
  text-decoration: none;
}


a:hover {
  text-decoration: none;
}


a:active {
  text-decoration: none;
}


/* ------------------------------------
---------------------------------------
HEADER SECTION
---------------------------------------
------------------------------------ */

.header-content-container {
  height: 100vh;
  text-align: center;
}

.header-content {
  height: 160px;
}

.heading-text-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.header-heading,
.header-subheading {
  font-size: 1.85rem;
  font-weight: 300;
  line-height: 1.15;
  color: #fafafa;
  animation-duration: 1.4s;
  animation-timing-function: cubic-bezier(0.21, 1.11, 0.81, 0.99);
}

.header-heading {
  max-width: 425px;
  padding: 30px 30px 0;
  margin: 0;
  animation-name: moveInLeft;
}

.header-subheading {
  padding: 0 30px 15px;
  margin: 0;
}

@keyframes moveInLeft {
  0% {
    opacity: 0;
    transform: translateX(-10rem);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.header-subheading {
  animation-name: moveInRight;
}

@keyframes moveInRight {
  0% {
    opacity: 0;
    transform: translateX(10rem);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

.header-heading-span {
  color: #785af0;
}

.cta-container {
  width: 136px;
  margin: 0 auto;
  animation-name: moveInBottom;
  animation-duration: 1.4s;
  animation-delay: 0.5s;
  -webkit-animation-delay: 0.5s;
  animation-timing-function: cubic-bezier(0.21, 1.11, 0.81, 0.99);
  opacity: 0;
  -webkit-animation-fill-mode: forwards;
}

.cta-container::after {
  content: "";
  position: absolute;
  z-index: -1;
  top: -8px;
  left: -16.5px;
  width: 165px;
  height: 53px;
  background-color: #1a1a1a;
}

@keyframes moveInBottom {
  0% {
    opacity: 0;
    transform: translateY(10rem);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

/* tsParticles CONTAINER */
#tsparticles {
  position: absolute;
  left: 0;
  top: 0;
  z-index: -1;
  width: 100vw;
  height: 100vh;
  background-color: #1a1a1a;
}


/* ------------------------------------
---------------------------------------
NAVIGATION
---------------------------------------
------------------------------------ */

.main-nav {
  position: sticky;
  top: 0;
  left: 0;
  right: 0;
  z-index: 100;
  height: 50px;
  border-bottom: 1px solid #1A1A1A;
  box-shadow: 0 4px 4px rgb(0 0 0 / 30%);
  background-color: #272727;
}

.main-nav-logo {
  padding-left: 10px;
  font-size: 1rem;
  color: #2cb67d;
}

.hamburger-nav-link-container {
  height: 200px;
}

.hamburger-nav-link {
  position: relative;
  z-index: 400;
  padding: 0 12px;
  border-bottom: 3px solid #785af0;
  font-size: 1.65rem;
  font-weight: 300;
  color: #fafafa;
}

.hamburger-nav-link::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  transform: scaleY(0);
  transform-origin: bottom center;
  transition: transform 0.3s;
  background: #785af0;
}

.hamburger-nav-link:hover::after {
  transform: scaleY(1);
}

.hamburger-nav-link:hover {
  color: #1A1A1A;
}

.main-nav-link-container {
  margin-right: 40px;
}

.main-nav-link {
  margin-right: 12px;
  font-size: 1.1rem;
  color: #fafafa;
}

.main-nav-link:hover {
  color: #2cb67d;
  border-bottom: 2px solid #785af0;
}

/* ------------------------------------
---------------------------------------
HAMBURGER MENU
---------------------------------------
------------------------------------ */

.hamburger-menu {
  position: fixed;
  top: 0;
  right: 12px;
}

#menu-toggle {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#menu-toggle input {
  position: absolute;
  top: 9px;
  left: -2px;
  width: 40px;
  height: 32px;
  /* hide this */
  opacity: 0;
  /* and place it over the hamburger */
  z-index: 500;
  -webkit-touch-callout: none;
}

/*
Just a quick hamburger
 */
#menu-toggle span {
  position: relative;
  display: block;
  width: 26px;
  height: 1.75px;
  background: #2cb67d;
  border-radius: 3px;
  z-index: 400;
  transform-origin: 4px 0px;
  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
    opacity 0.55s ease;
}

#menu-toggle span:first-child {
  transform-origin: 0% 0%;
}

#menu-toggle span:nth-child(2),
#menu-toggle span:nth-child(3) {
  margin-bottom: 5px;
}


#menu-toggle span:nth-last-child(2) {
  transform-origin: 0% 100%;
}
/* ... */

